Update vendored SDL to 2.28.1 and SDL_mixer to latest SDL2 branch (pre-release 2.7.0) Update Android command line tools Fixed possible crash with closedir if platform doesn't accept NULL